[package]
name = "sn-pulsar"
version = "4.1.2"
edition = "2018"
authors = [
    "Colin Stearns <cstearns@developers.wyyerd.com>",
    "Kevin Stenerson <kstenerson@developers.wyyerd.com>",
    "Geoffroy Couprie <contact@geoffroycouprie.com>",
]

license = "MIT/Apache-2.0"
readme = "./README.md"
repository = "https://github.com/streamnative/pulsar-rs"
documentation = "https://docs.rs/sn-pulsar"
description = "Rust client for Apache Pulsar"
keywords = ["pulsar", "api", "client"]

[lib]
name = "pulsar"

[dependencies]
bytes = "1.1.0"
crc = "2.1.0"
futures = "0.3.21"
nom = { version="7.1.1", default-features=false, features=["alloc"] }
prost = "0.9.0"
prost-derive = "0.9.0"
rand = "0.8.5"
chrono = "0.4.19"
futures-timer = "3.0"
log = "0.4.6"
url = "2.2.2"
regex = "1.5.5"
bit-vec = "0.6.3"
futures-io = "0.3.21"
native-tls = "0.2.8"
pem = "0.8.3"
tokio = { version = "1.17.0", features = ["rt", "net", "time"], optional = true }
tokio-util = { version = "0.6.9", features = ["codec"], optional = true }
tokio-native-tls = { version = "0.3", optional = true }
async-std = {version = "1.10.0", features = [ "attributes", "unstable" ], optional = true }
asynchronous-codec = { version = "0.6", optional = true }
async-native-tls = { version = "0.3", optional = true }
lz4 = { version = "1.23", optional = true }
flate2 = { version = "1.0.22", optional = true }
zstd = { version = "0.9.2+zstd.1.5.1", optional = true }
snap = { version = "1.0.5", optional = true }
openidconnect = { version = "2.2.0", optional = true }
oauth2 = { version = "4.1", optional = true }
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = "1.0.79", optional = true }
async-trait = "0.1.51"
data-url = { version = "0.1.1", optional = true }

[dev-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
env_logger = "0.9"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.9.0"

[features]
default = [ "compression", "tokio-runtime", "async-std-runtime", "auth-oauth2" ]
compression = [ "lz4", "flate2", "zstd", "snap" ]
tokio-runtime = [ "tokio", "tokio-util", "tokio-native-tls" ]
async-std-runtime = [ "async-std", "asynchronous-codec", "async-native-tls" ]
auth-oauth2 = [ "openidconnect", "oauth2", "serde", "serde_json", "data-url" ]
